force-app/main/default/objects/sked__Templated_Job_Allocation__c/sked__Templated_Job_Allocation__c.object-meta.xml
<CustomObject>
    <label>Templated Job Allocation</label>
    <nameField>
        <displayFormat>TJA-{0000}</displayFormat>
        <label>Templated Job Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Templated Job Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>