force-app/main/default/objects/sked__Templated_Job_Allocation__c/fields/sked__Duration__c.field-meta.xml
<CustomField>
    <fullName>sked__Duration__c</fullName>
    <label>Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>