force-app/main/default/objects/sked__Templated_Job_Allocation__c/fields/sked__Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>sked__Team_Leader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Leader</label>
    <type>Checkbox</type>
</CustomField>