force-app/main/default/objects/sked__Templated_Job_Allocation__c/fields/sked__Templated_Resource_Requirement__c.field-meta.xml
<CustomField>
    <fullName>sked__Templated_Resource_Requirement__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Templated Resource Requirement</label>
    <referenceTo>sked__Templated_Resource_Requirement__c</referenceTo>
    <relationshipLabel>Templated Job Allocations</relationshipLabel>
    <relationshipName>Templated_Job_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>