force-app/main/default/objects/sked__Templated_Job_Allocation__c/validationRules/sked__StartOffsetDaysNonNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartOffsetDaysNonNegative</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( sked__Start_Offset_Days__c ) ) , sked__Start_Offset_Days__c &lt; 0 )</errorConditionFormula>
    <errorDisplayField>sked__Start_Offset_Days__c</errorDisplayField>
    <errorMessage>Start Offset Days must be null or non-negative</errorMessage>
</ValidationRule>